2007-11-14  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/gui/chat.cpp: Fixed up and down arrows in chat box.

2007-11-13  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* data/maps/new_1-1.tmx, data/maps/new_10-1.tmx, 
	data/maps/new_11-1.tmx, data/maps/new_12-1.tmx, data/maps/new_13-1.tmx,
	data/maps/new_14-1.tmx, data/maps/new_15-1.tmx, data/maps/new_16-1.tmx,
	data/maps/new_17-1.tmx, data/maps/new_18-1.tmx, data/maps/new_19-1.tmx,
	data/maps/new_2-1.tmx, data/maps/new_3-1.tmx, data/maps/new_4-1.tmx,
	data/maps/new_5-1.tmx, data/maps/new_6-1.tmx, data/maps/new_7-1.tmx,
	data/maps/new_8-1.tmx, data/maps/new_9-1.tmx, tmw.cbp:
	Started porting warps to the new server, updated project file.
	* data/maps/new_1-1.tmx: Fixed object type and added npcs.
	* data/maps/new_1-1.tmx, data/maps/new_2-1.tmx: Fixed shop on map 1 and
	added npcs on map 2.

2007-11-11  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* data/items.xml: Fixed types of equipable items.

2007-11-09  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/sprites/chest-chainmail-male,
	data/graphics/sprites/chest-chainmail-female,
	data/graphics/sprites/chest-cotton-male,
	data/graphics/sprites/chest-cotton-female,
	data/graphics/sprites/chest-leather-male,
	data/graphics/sprites/chest-leather-female,
	data/graphics/sprites/chest-tnecksweater-male,
	data/graphics/sprites/chest-tnecksweater-female,
	data/graphics/sprites/chest-vnecksweater-male,
	data/graphics/sprites/chest-vnecksweater-female:
	Modifications at the back shading of shirt sprites by Pauan.

2007-11-08  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/gui/equipmentwindow.cpp: Ensured "unequip" button is visible.

2007-11-04  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/resources/dye.cpp, src/resources/resourcemanager.cpp: Moved
	palette qualifiers to the right as the code appends things on the left.
	* src/resources/spritedef.cpp, src/resources/spritedef.h,