@@ -23,7 +23,7 @@
 
 #include "inttextbox.h"
 
-#include <guichan/key.hpp>
+#include "sdlinput.h"
 
 #include "../utils/tostring.h"
 
@@ -37,17 +37,21 @@ IntTextBox::keyPressed(gcn::KeyEvent &event)
 {
     const gcn::Key &key = event.getKey();
 
-    if (key.isNumber() || key.getValue() == gcn::Key::BACKSPACE
-        || key.getValue() == gcn::Key::DELETE)
+    if (key.getValue() == Key::BACKSPACE ||
+        key.getValue() == Key::DELETE)
     {
-        gcn::TextBox::keyPressed(event);
+        setText(std::string());
+        event.consume();
     }
 
-    std::stringstream s(gcn::TextBox::getText());
+    if (!key.isNumber()) return;
+    TextField::keyPressed(event);
+
+    std::istringstream s(getText());
     int i;
     s >> i;
-    if (gcn::TextBox::getText() != "")
-        setInt(i);
+    setInt(i);
+    generateAction();
 }
 
 void IntTextBox::setRange(int min, int max)
@@ -58,9 +62,7 @@ void IntTextBox::setRange(int min, int max)
 
 int IntTextBox::getInt()
 {
-    if (gcn::TextBox::getText() == "")
-        return 0;
-    return mValue;
+    return getText().empty() ? mMin : mValue;
 }
 
 void IntTextBox::setInt(int i)
